--- a/styles/Navbar.css
+++ b/styles/Navbar.css
@@ -1,89 +1,290 @@
-.navbar {
-  width: 100%;
-  height: 9vh;
-  justify-items: center;
-  box-shadow: rgb(25 25 25 / 25%) 0px 10px 15px;
-  font-style: oblique;
-  font-family: monospace;
-}
-.logo {
-  margin-left: 2rem;
-}
-.logo span {
-  font-size: 25px;
+.container__navbar{
+  padding: 0;
+  font-size: 1.2rem;
   font-weight: 500;
-  color: black;
-  font-family: cursive;
-}
-.inputCategories {
-  border-style: none;
-  border-radius: 25px;
-  width: 12.5rem;
-  height: 2.5rem;
-  margin-left: 0.5rem;
-}
-.inputCategories:focus {
-  outline: none;
-  border-style: none;
-}
-.HiShoppingBag {
-  color: rgb(145, 70, 110);
-}
-singinSecetion {
-  font-style: unset;
-}
-.singinSecetion button {
-  border-style: none;
-  border-radius: 35px;
-  opacity: 0.7;
-  width: 9rem;
-  background: white;
-}
+  width: 100%;
+  height: 3%;
+  background: black;
 
-.listLeft {
+}
+.top__bar{
+  width:100%;
   display: flex;
-}
-.icon ul {
-  display: flex;
-  list-style-type: none;
-  margin: 2px;
-}
-.icon a {
-  color: black;
-}
-.icon a:hover {
-  color: rgb(92, 45, 70);
-}
-.singinSecetion {
-  display: flex;
+  text-align: center;
   justify-content: center;
-  font-weight: initial;
-  font-size: 15px;
+  color:white;
+
 }
-.singinSecetion a {
-  text-decoration: none;
-  color: black;
-  margin: 0.3rem;
-  margin-top: 2.5rem;
-  font-size: 17px;
-  font-weight: bold;
+.top__offer{
+  padding: 6px;
+font-style: var(--bs-body-font-size);
+  margin-right: 4px;
 }
-.singinSecetion a:hover {
-  color: rgb(219, 173, 198);
+.top__offer:not(:last-child):after{
+  margin-left: 1.2rem;
+  content: ' | ';
+
 }
-.Register {
-  font-size: 17px;
-  margin: 4px;
+.top__icon{
+  width: 3rem;
+  height: 1.9rem;
+  padding: 4px;
+  color:var(--cm-color-nav);
+}
+.top__offer span{
+  color:var(--cm-color-nav);
+}
+.top__offer:hover{
+  cursor: pointer;
+  color:var(--cm-color-nav)
+}
+/* bottom navbar */
+.bottom__bar{
+  background: white;
+  display: flex;
+  color:black;
+  height: 3rem;
+  padding: 4px;
+  justify-content: space-between;
+
+}
+.bottom__bar img{
+  padding: 4px;
+  margin: 12px 0px 0px 52px;
+  width: 11rem;
+  height: 100%;
+}
+.proporties__bar{
+  display: flex;
+  margin: 14px 12px 0px 0px;
+}
+.proporties__bar ul{
+  display: flex;
+  list-style: none;
+}
+.proporties__bar img{
+  width: 1rem;
+  height: 1rem;
 }
 
-@media screen and (max-width: 1200px) {
-  .search {
+.search-bar {
+  max-width: 400px;
+  margin: 20px 50px;
+  border: none;
+  padding: 17px;
+  position: relative;
+}
+
+.search-bar input{
+  position: relative;
+  background: transparent;
+  padding: 12px 24px;
+  border-radius: 8px;
+  border: 2px solid black;
+  width: 100%;
+}
+.icon__search {
+  position: relative;
+  left: 14rem;
+  top: -2.5rem;
+  color: black;
+  width:10%;
+}
+.search__bar{
+  display: flex;
+  width: 24rem;
+  height: 2.8rem;
+  border: 1px solid #d5cece;
+  border-radius: 4px;
+  position: relative;
+  justify-content: center;
+  justify-items: center;
+  text-align: center;
+  margin-top: 1%;
+}
+.input__bar{
+  width: 80%;
+  display: flex;
+}
+.input__bar input{
+  position: relative;
+  height: 1.5rem;
+  padding: 2px;
+  margin-top: 8px;
+  border: none;
+}
+.input__bar > input:focus{
+  border: none;
+  border-style: none;
+  outline: none;
+}
+.input__bar svg{
+  position: absolute;
+   margin: 10px 0px 0px 260px;
+  cursor: pointer;
+  color: gray;
+  background: #d5cece;
+  color: white;
+  border-radius: 50%;
+
+}
+.search__icon{
+  width: 20%;
+  background: #3e3b3bf5;
+  color: white;
+  justify-content: center;
+  justify-items: center;
+}
+.search__icon svg{
+  padding: 2px;
+  margin-top: 8px;
+}
+.world__user__shopping img{
+  width: 2rem;
+  height: 2rem;
+  color: black;
+}
+.dropdown__list__world{
+  top:110px;
+  right: 160px;
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 240px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  height: 16rem;
+
+}
+.world__user__shopping li:nth-child(1):hover .dropdown__list__world{
+ display: block;
+  cursor: pointer;
+  color: black;
+  transition: 0.4s ease-in-out;
+  cursor: pointer;
+  z-index: 2;
+}
+.world__user__shopping{
+  cursor: pointer;
+  padding: 2px;
+}
+.world__user__shopping select{
+  padding: 4px;
+  margin: 4px;
+  width: 96%;
+  border: 1px solid #9d909073;
+}
+.dropdown__list__user{
+  top:110px;
+  right: 90px;
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 240px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  height: 16rem;
+  text-align: center;
+
+}
+.world__user__shopping li:nth-child(2):hover .dropdown__list__user{
+ display: block;
+  cursor: pointer;
+  color: black;
+  transition: 0.4s ease-in-out;
+  cursor: pointer;
+  z-index: 2;
+}
+.dropdown__list__world h5{
+  padding: 8px;
+  color: gray;
+}
+.register__here {
+  background: #3e3b3bf5;
+  color: white;
+  margin: 1rem;
+  padding: 4px;
+  border-radius: 8px;
+}
+.register__here:hover{
+  background: #5d626a;
+}
+.social__icon{
+  display: inline-grid;
+  justify-content: center;
+  justify-items: center;
+}
+.social__icon span{
+  margin: 0.7rem;
+  padding: 2px;
+
+}
+.orders__coupons span:hover{
+  font-size: 1.1rem;
+  color:black;
+}
+.orders__coupons{
+  margin: 1.2rem;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  display: grid;
+  font-size: 1rem;
+  color:#5d626a;
+}
+.orders__coupons span{
+  margin-top: 0.5rem;
+}
+.world__user__shopping >ul >li >img:last-child{
+  position: relative;
+}
+.world__user__shopping >ul >li >span:last-child{
+  position: absolute;
+  background: #dc2626;
+  color: #fff;
+  border-radius: 50%;
+  width: 1.5rem;
+  height: 1.6rem;
+  right: 12px;
+ padding: 2px;
+  text-align: center;
+}
+/* screen medium */
+@media screen and (max-width: 1024px) {
+.top__bar{
+  flex-wrap: nowrap;
+  font-size: 0.9rem;
+  justify-content: center;
+  justify-items: center;
+  text-align: center;
+   margin:0px;
+}
+  .bottom__bar{
+    width: 100%;
+    flex-wrap: nowrap;
+  }
+  .bottom__bar img{
+    margin: 4px 0px 0px 0px;
+  }
+}
+/* screen mobile */
+@media screen and (max-width: 766px) {
+.top__bar{
+  flex-direction: column;
+  font-size: 0.9rem;
+  justify-content: center;
+  justify-items: center;
+  text-align: center;
+  margin: 0px;
+}
+  .top__offer:not(:last-child):after{
+  display: none;
+  }
+  .search__bar{
     display: none;
   }
-  .logo span {
-    font-size: 20px;
-    font-weight: 500;
-    color: black;
-    font-family: cursive;
+  .world__user__shopping {
+    cursor: pointer;
+    padding: 2px;
+    margin: -8px 8px 0px 6px;
+
   }
 }
